add recent changes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,12 @@
 ---
 import BaseLayout from "@/layouts/BaseLayout.astro"
 import Hero from "@/components/Hero.astro";
+import BlogPostList from "@/components/BlogPostList.astro";
+import NoteCategories from "@/components/NoteCategories.astro";
 ---
 
 <BaseLayout>
 	<Hero />
+	<BlogPostList />
+	<NoteCategories />
 </BaseLayout>
