Add latest changes
U: Added new components and pages

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,7 @@
 ---
 import '@/styles/globals.css';
 import Navbar from '../components/Navbar.astro';
+import SpotifyFloatingCard from "@/components/SpotifyFloatingCard.astro";
 ---
 
 <html lang="en">
@@ -14,5 +15,6 @@ import Navbar from '../components/Navbar.astro';
 	<body>
         <Navbar />
         <slot />
+		<SpotifyFloatingCard />
 	</body>
 </html>
