--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,13 @@
 import BaseLayout from "@/layouts/BaseLayout.astro"
 import Hero from "@/components/Hero.astro";
 import BlogPostList from "@/components/BlogPostList.astro";
-import NoteCategories from "@/components/NoteCategories.astro";
+import NoteLinks from "@/components/NoteLinks.astro";
+import YouTubeSection from "@/components/YouTubeSection.astro";
 ---
 
 <BaseLayout>
 	<Hero />
 	<BlogPostList />
-	<NoteCategories />
+	<NoteLinks />
+	<YouTubeSection />
 </BaseLayout>
