--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -14,7 +14,12 @@ const navItems = [
     <div class="flex items-center justify-between h-16">
       <div class="flex items-center">
         <a href="/" class="flex-shrink-0">
-          <span class="text-2xl font-bold text-gray-900 dark:text-white">Logo</span>
+          <img
+            src="/geauxweisbeck4logo.svg"
+            alt="Logo"
+            width="200"
+            height="200"
+          />
         </a>
       </div>
       <div class="hidden md:block">
