--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import BaseLayout from "@/layouts/BaseLayout.astro"
 import Hero from "@/components/Hero.astro";
 import BlogPostList from "@/components/BlogPostList.astro";
 import NoteLinks from "@/components/NoteLinks.astro";
+import ProjectsSection from "@/components/ProjectsSection.astro";
 import YouTubeSection from "@/components/YouTubeSection.astro";
 ---
 
@@ -10,5 +11,6 @@ import YouTubeSection from "@/components/YouTubeSection.astro";
 	<Hero />
 	<BlogPostList />
 	<NoteLinks />
+	<ProjectsSection />
 	<YouTubeSection />
 </BaseLayout>
