--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -6,6 +6,7 @@ const navItems = [
   { name: 'Notes', href: '/notes', icon: 'file-text' },
   { name: 'Projects', href: '/projects', icon: 'briefcase' },
   { name: 'Resources', href: '/resources', icon: 'library' },
+  { name: 'Donate', href: '/donate', icon: 'dollar-sign' },
 ];
 ---
 
