--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -11,7 +11,7 @@ import Navbar from '../components/Navbar.astro';
 		<meta name="generator" content={Astro.generator} />
 		<title>GeauxWeisbeck4.dev | Andrew's Digital Garden</title>
 	</head>
-	<body>
+	<body class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <Navbar />
         <slot />
 	</body>
