--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Hero from "@/components/Hero.astro";
 import BlogPostList from "@/components/BlogPostList.astro";
 import NoteLinks from "@/components/NoteLinks.astro";
 import ProjectsSection from "@/components/ProjectsSection.astro";
+import KanbanBoard from "@/components/KanbanBoard";
 import YouTubeSection from "@/components/YouTubeSection.astro";
 ---
 
@@ -12,5 +13,6 @@ import YouTubeSection from "@/components/YouTubeSection.astro";
 	<BlogPostList />
 	<NoteLinks />
 	<ProjectsSection />
+	<KanbanBoard />
 	<YouTubeSection />
 </BaseLayout>
