--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,7 +1,9 @@
 ---
 import BaseLayout from "@/layouts/BaseLayout.astro";
+import ProjectsSection from "@/components/ProjectsSection.astro";
 ---
 
 <BaseLayout>
     <h1>Project Page</h1>
+    <ProjectsSection />
 </BaseLayout>
