--- a/src/pages/geauxlinks.astro
+++ b/src/pages/geauxlinks.astro
@@ -4,5 +4,11 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
 const geauxLinks = [
     { title: "GeauxWeisbeck4.dev", href: "https://geauxweisbeck4.dev", description: "My digital garden/personal website.", image: "geauxcodelogo2.png" },
     { title: "Tar Heel Dev Studio", href: "https://tarheeldevstudio.netlify.app", description: "My Web Development, Marketing, and Design Freelance business", image: "geauxcodelogo2.png" },
+    { title: "Andrew's Resume & Portfolio Website", href: "https://andrewweisbeck.com", description: "The official Resume and Portfolio of Andrew Weisbeck", image: "geauxcodelogo2.png" },
+    { title: "Geaux Code Blog", href: "https://geauxcode.hashnode.dev", description: "My Hashnode blog about full-stack development", image: "geauxcodelogo2.png" },
+    { title: "Andrew Weisbeck's GitHub", href:"https://github.com/geauxweisbeck4", description: "My GitHub profile page where you can find all my work.", image: "geauxcodelogo2.png" },
+    { title: "Andrew Weisbeck's LinkedIn Page", href: "https://linkedin.com/in/geauxweisbeck4", description: "My LinkedIn Page", image: "geauxcodelogo2.png" },
+    { title: "Andrew's Threads Page", href: "https://threads.com/geauxweisbeck4", description: "My Threads page where I am active", image: "geauxcodelogo2.png" },
+    { title: "Andrew's Mastodon Page", href: "https://fosstodon.org/geauxweisbeck4", description: "My Mastodon page on Fosstodon server", image: "geauxcodelogo2.png" }
 ];
 ---
