--- a/src/components/BlogPostSection.astro
+++ b/src/components/BlogPostSection.astro
@@ -17,7 +17,7 @@ const { limit = 3 } = Astro.props;
             <h3 class="text-xl font-bold mb-2">{post.data.title}</h3>
             <p class="text-gray-500 mb-2">{post.data.description}</p>
             <p class="text-sm text-gray-500 mb-2">{post.data.pubDate.toLocaleDateString()}</p>
-            <a href={`/blog/${post.slug}`} class="text-blue-500 hover:underline">Read More</a>
+            <a href={`/blog/${post.slug}`} class="text-blue-500 hover:underline">Read</a>
         </div>
     ))}
 </div>
