--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -108,7 +108,7 @@ const profileInfo = {
 
       <!-- Main Content -->
       <main class="ml-64 p-8 w-full">
-        <Navbar />
+        <!-- <Navbar /> -->
         <slot />
       </main>
     </div>
